Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106527

AT-SPI2: Incorrect sizes returned for WINDOW and PARENT coordinates

XMLWordPrintable

    • Linux/Wayland, Linux/X11
    • 1b0e76f51 (dev), f89a2f41e (6.6), 172a3544a (tqtc/lts-6.5)

      AT-SPI2 defines 3 coordinate types: SCREEN, WINDOW, and PARENT. Ref: https://gitlab.gnome.org/GNOME/at-spi2-core/-/blob/main/atspi/atspi-constants.h#L126

      The SCREEN coordinate type works reliably. When using WINDOW and PARENT coordinates, the size is often wrong. The coordinate type really shouldn't affect the width and height at all.

      This can be easily tested by selecting an accessible object in Accerciser and requesting extents in each coordinate space:

       

      In [25]: acc.get_extents(0).height
      
      Out[26]: 512
      
      In [26]: acc.get_extents(1).height
      
      Out[27]: 1342
      
      In [27]: acc.get_extents(2).height
      
      Out[28]: 1342
      
      

      This also affects the object:bounds-changed notification which returns results in window-space.

      Related: https://gitlab.gnome.org/GNOME/at-spi2-core/-/issues/72

        For Gerrit Dashboard: QTBUG-106527
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            madewokherd Esme Povirk
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes